--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-tester-desktop",
+  "name": "calmapi-restclient",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -10,17 +10,19 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "^2",
+    "@tauri-apps/plugin-updater": "^2.0.0",
     "autoprefixer": "^10.4.20",
     "lucide-react": "^0.453.0",
     "postcss": "^8.4.47",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@tauri-apps/cli": "^2",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -30,7 +32,6 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9",
-    "@tauri-apps/cli": "^2"
+    "vite": "^5.4.9"
   }
 }
