--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: "npm"
 
       - name: Install Rust stable
@@ -60,8 +60,22 @@ jobs:
       - name: Install Dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-20.04'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libwebkit2gtk-4.0-dev \
+            libappindicator3-dev \
+            librsvg2-dev \
+            patchelf \
+            build-essential \
+            curl \
+            wget \
+            libssl-dev \
+            libglib2.0-dev \
+            libsoup2.4-dev \
+            libjavascriptcoregtk-4.0-dev \
+            libatk1.0-dev \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev
 
       - name: Install frontend dependencies
         run: npm install # This will install both dependencies and devDependencies
