--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-20.04
     outputs:
       release_id: ${{ steps.create-release.outputs.result }}
+      upload_url: ${{ steps.create-release.outputs.data.upload_url }}
 
     steps:
       - uses: actions/checkout@v4
@@ -33,7 +34,10 @@ jobs:
               draft: true,
               prerelease: false
             })
-            return data.id
+            return {
+              id: data.id,
+              data: data
+            }
 
   build-tauri:
     needs: create-release
@@ -51,53 +55,58 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
           cache: "npm"
 
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install Dependencies (ubuntu only)
+      - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-20.04'
         run: |
+          sudo apt-get update
           sudo apt-get install -y \
+            pkg-config \
+            libglib2.0-dev \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
-            libappindicator3-dev \
+            libayatana-appindicator3-dev \
             librsvg2-dev \
             patchelf \
             build-essential \
             curl \
             wget \
             libssl-dev \
-            libglib2.0-dev \
             libsoup2.4-dev \
             libjavascriptcoregtk-4.0-dev \
-            libatk1.0-dev \
-            libgtk-3-dev \
-            libayatana-appindicator3-dev
+            libatk1.0-dev
+
+          # Verify glib-2.0 is properly installed
+          pkg-config --modversion glib-2.0
+
+          # Set PKG_CONFIG_PATH
+          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig" >> $GITHUB_ENV
+
+      - name: Install dependencies (mac only)
+        if: matrix.platform == 'macos-latest'
+        run: |
+          rustup target add aarch64-apple-darwin
+          rustup target add x86_64-apple-darwin
 
       - name: Install frontend dependencies
-        run: npm install # This will install both dependencies and devDependencies
+        run: npm install
+
+      - name: Build Frontend
+        run: npm run build
 
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+          PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
-
-      - name: Upload artifacts to release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: matrix.platform == 'ubuntu-20.04'
-        with:
-          upload_url: ${{ needs.create-release.outputs.upload_url }}
-          asset_path: ./target/release/bundle/deb/your-app-name.deb
-          asset_name: your-app-name.deb
-          asset_content_type: application/vnd.debian.binary-package
 
   publish-release:
     permissions:
