--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,27 +65,30 @@ jobs:
         if: matrix.platform == 'ubuntu-20.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y \
+          sudo apt-get remove -y pkgconf
+          sudo apt-get install -y --no-install-recommends \
             pkg-config \
-            libglib2.0-dev \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
-            patchelf \
-            build-essential \
-            curl \
-            wget \
-            libssl-dev \
+            libglib2.0-dev \
             libsoup2.4-dev \
             libjavascriptcoregtk-4.0-dev \
-            libatk1.0-dev
+            patchelf
 
-          # Verify glib-2.0 is properly installed
-          pkg-config --modversion glib-2.0
+          # Verify installations
+          pkg-config --version
+          pkg-config --list-all | grep glib-2.0
 
-          # Set PKG_CONFIG_PATH
-          echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig" >> $GITHUB_ENV
+          # Export pkg-config paths
+          export PKG_CONFIG_PATH="/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig:$PKG_CONFIG_PATH"
+          echo "PKG_CONFIG_PATH=${PKG_CONFIG_PATH}" >> $GITHUB_ENV
 
       - name: Install dependencies (mac only)
         if: matrix.platform == 'macos-latest'
@@ -104,7 +107,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-          PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
