--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,37 +64,33 @@ jobs:
       - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-20.04'
         run: |
+          # Clean package manager state
+          sudo rm -rf /var/lib/apt/lists/*
+          sudo apt-get clean
           sudo apt-get update
-          sudo apt-get purge -y '^libglib2.0-dev.*' '^libglib2.0-0.*' '^libglib2.0-bin.*' '^libglib2.0-data.*' pkg-config pkgconf
+
+          # Fix any broken dependencies
+          sudo apt-get install -f
+
+          # Install required packages carefully
           sudo apt-get install --no-install-recommends -y \
             pkg-config \
-            build-essential \
-            libglib2.0-0 \
-            libglib2.0-dev \
             libgtk-3-dev \
             libwebkit2gtk-4.0-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
-            patchelf
+            patchelf \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
+            libglib2.0-dev \
+            libsoup2.4-dev
 
-          # Verify glib installation
-          ls -l /usr/lib/x86_64-linux-gnu/pkgconfig/glib-2.0.pc || true
-          ls -l /usr/share/pkgconfig/glib-2.0.pc || true
-          pkg-config --modversion glib-2.0 || true
-
-          # Set PKG_CONFIG_PATH explicitly
+          # Verify installations
+          pkg-config --version
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig" >> $GITHUB_ENV
-          echo "PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1" >> $GITHUB_ENV
-
-          # Debug: Print pkg-config information
-          echo "PKG_CONFIG_PATH: $PKG_CONFIG_PATH"
-          pkg-config --list-all | grep glib
-
-          # Install additional dependencies if needed
-          sudo apt-get install -y \
-            libglib2.0-dev-bin \
-            gobject-introspection \
-            libgirepository1.0-dev
 
       - name: Install dependencies (mac only)
         if: matrix.platform == 'macos-latest'
@@ -108,19 +104,12 @@ jobs:
       - name: Build Frontend
         run: npm run build
 
-      - name: Debug pkg-config (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04'
-        run: |
-          echo "Current PKG_CONFIG_PATH: $PKG_CONFIG_PATH"
-          pkg-config --debug --print-errors --cflags --libs glib-2.0
-
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
           PKG_CONFIG_PATH: /usr/lib/x86_64-linux-gnu/pkgconfig:/usr/share/pkgconfig
-          PKG_CONFIG_ALLOW_SYSTEM_CFLAGS: 1
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
