--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,9 @@ jobs:
             file \
             libssl-dev \
             libglib2.0-dev \
-            libsoup2.4-dev
+            libsoup2.4-dev \
+            glib-2.0 \
+            glib-2.0-dev # <-- Add these packages
 
           # Verify installations
           pkg-config --version
